--- a/Portfolio-Website/assets/css/style.css
+++ b/Portfolio-Website/assets/css/style.css
@@ -307,6 +307,8 @@ header img:hover {
 
 .nav-normal ul.menu-mobile { display: none; }
 
+.toggle-open { cursor: pointer; }
+
 @media (max-width: 54rem) {
     .nav-normal ul.menu-normal { display: none; }
 
@@ -326,10 +328,11 @@ header img:hover {
     position: fixed;
     z-index: 1000;
     inset: 0 0 0 20%;
-    padding: var(--gutter-row-1);
+    padding: 2.6rem var(--gutter-col-1);
     background: hsl(0 0% 92.9% /0.50);
     backdrop-filter: blur(1.6rem);
     color: var(--gray-900);
+    transition: transform 500ms ease-in-out;
 }
 
 #mobile-section[data-visible="true"] { transform: translateX(0%); }
