--- a/Portfolio-Website/assets/css/style.css
+++ b/Portfolio-Website/assets/css/style.css
@@ -301,7 +301,7 @@ header img:hover {
     display: flex;
     flex-direction: column;
     gap: 0.4rem;
-    justify-self: center;
+    align-self: center;
     align-items: center;
 }
 
@@ -424,14 +424,14 @@ header img:hover {
 .problems-1 {
     display: flex;
     flex-direction: column;
-    justify-self: flex-start;
+    
 }
 
 .problems-2 {
     display: flex;
     flex-direction: column;
     row-gap: var(--gutter-col-1);
-    justify-self: flex-end;
+    
 }
 
 .problems-2 ul li {
@@ -460,7 +460,7 @@ header img:hover {
 
     .problems-section img { width: var(--image-col-2); }
 
-    .problems-1, .problems-2 { justify-self: center; }
+    .problems-1, .problems-2 { align-self: center; }
 
     .problems-2 .section-title, .problems-2 .section-subtitle { text-align: center; }
 
@@ -530,6 +530,21 @@ header img:hover {
 }
 
 /* ==================== BENEFITS-SECTION ==================== */
+
+.skip-to-content {
+    position: absolute;
+    z-index: 9999;
+    margin-inline: auto;
+    padding: var(--gutter-row-padding) var(--gutter-col-padding);
+    background: hsl(0 0% 92.9% /0.50);
+    color: var(--gray-100);
+    transform: translateY(-100%);
+    transition: transform 500ms ease-in-out;
+}
+
+.skip-to-content:focus {
+    transform: translateY(0);
+}
 
 .benefits-section {
     max-width: var(--breakpoint-14);
@@ -696,7 +711,7 @@ main {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    justify-self: center;
+    align-self: center;
     align-items: center;
 }
 
@@ -705,7 +720,7 @@ main {
     flex-direction: column;
     row-gap: var(--gutter-row-1);
     justify-content: center;
-    justify-self: center;
+    align-self: center;
     align-items: center;
 }
 
